@@ -1,1 +1,1 @@
-celery>=3.1
+celery>=3.1.1
